# RustOS

./: .gitignore  LICENSE  README.md
rust_os/: Cargo.toml  x86_64-rust_os.json
rust_os/src/: main.rs  vga_buffer.rs
