[package]
name = "rust_os"
version = "0.1.0"
authors = ["perpetrator"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
panic = "abort" # disable stack unwinding on panic

[profile.release]
panic = "abort" # disable stack unwinding on panic

[dependencies]
bootloader = "0.8.0"